Update report content to account hacking complaint

--- a/index.html
+++ b/index.html
@@ -442,11 +442,11 @@
             </h2>
             <div class="info-grid">
                 <div class="info-label">Violation Type</div>
-                <div class="info-value">Inappropriate Behavior & Community Policy Violation</div>
+                <div class="info-value">Account Hacking & Unauthorized Access</div>
             </div>
             <div class="info-grid">
                 <div class="info-label">Categories</div>
-                <div class="info-value">Verbal Abuse | Hate Speech | Offensive Taunting</div>
+                <div class="info-value">Account Compromise | Unauthorized Login | Security Breach</div>
             </div>
         </div>
 
@@ -456,17 +456,17 @@
                 Complaint Description
             </h2>
             <div class="complaint-text">
-                I hereby submit this official complaint against user <strong>TomoGPT</strong> on the Scratch platform, for the following reasons:
+                I hereby submit this official complaint against user <strong>TomoGPT</strong> on the Scratch platform for hacking another user's account, based on the following details:
                 <br><br>
-                <strong>1. Verbal Abuse:</strong> The user directed offensive and inappropriate language that violates community conduct rules.
+                <strong>1. Unauthorized Account Access:</strong> The reported user gained access to another Scratch account without the owner's permission.
                 <br><br>
-                <strong>2. Hate Speech:</strong> Posted comments and content that incite hatred and hostility among users, creating a negative and unsafe environment.
+                <strong>2. Suspicious Login Activity:</strong> The affected account showed unusual login sessions and activity that the owner did not perform.
                 <br><br>
-                <strong>3. Offensive Taunting:</strong> Used deliberate taunting and insulting methods with the intent to offend and provoke.
+                <strong>3. Account Misuse:</strong> Actions were performed from the compromised account, including changes and interactions not made by the rightful owner.
                 <br><br>
-                <strong>4. Repeated Behavior:</strong> These actions are not isolated incidents, but rather a recurring pattern of violating behavior.
+                <strong>4. Security Risk to Community:</strong> This behavior threatens user safety and violates Scratch rules regarding digital security and account integrity.
                 <br><br>
-                I request that necessary actions be taken in accordance with platform policies to protect the community and ensure a safe and respectful environment for everyone.
+                I request immediate investigation and appropriate action to restore account security, prevent further unauthorized access, and protect the Scratch community.
             </div>
         </div>
 
@@ -476,10 +476,10 @@
                 Evidence & Attachments
             </h2>
             <ul class="evidence-list">
-                <li class="evidence-item">Screenshots of offensive comments</li>
-                <li class="evidence-item">Chat log records of violations</li>
-                <li class="evidence-item">Links to hate speech posts</li>
-                <li class="evidence-item">Testimonies from other users</li>
+                <li class="evidence-item">Screenshots of unauthorized account changes</li>
+                <li class="evidence-item">Login history showing suspicious access times</li>
+                <li class="evidence-item">Messages/posts made from the compromised account</li>
+                <li class="evidence-item">Statement from the original account owner</li>
             </ul>
         </div>
 
