--- a/index.html
+++ b/index.html
@@ -406,11 +406,11 @@
             </h2>
             <div class="info-grid">
                 <div class="info-label">Complainant Name</div>
-                <div class="info-value">bido</div>
+                <div class="info-value">bido/-_nile-river_-</div>
             </div>
             <div class="info-grid">
                 <div class="info-label">Submission Date</div>
-                <div class="info-value">February 15, 2026</div>
+                <div class="info-value">February 27, 2026</div>
             </div>
             <div class="info-grid">
                 <div class="info-label">Status</div>
@@ -427,7 +427,7 @@
             </h2>
             <div class="info-grid">
                 <div class="info-label">Username</div>
-                <div class="info-value">TomoGPT</div>
+                <div class="info-value">(the hacker of account)"princessofscratc8"</div>
             </div>
             <div class="info-grid">
                 <div class="info-label">Platform</div>
@@ -456,7 +456,7 @@
                 Complaint Description
             </h2>
             <div class="complaint-text">
-                I hereby submit this official complaint against user <strong>TomoGPT</strong> on the Scratch platform for hacking another user's account, based on the following details:
+                I hereby submit this official complaint against user <strong>(the hacker of account)"princessofscratc8"</strong> on the Scratch platform for hacking another user's account, based on the following details:
                 <br><br>
                 <strong>1. Unauthorized Account Access:</strong> The reported user gained access to another Scratch account without the owner's permission.
                 <br><br>
@@ -491,7 +491,7 @@
                 ✓ Successfully Submitted - Report will be reviewed by the appropriate team
             </div>
             <div class="footer-date">
-                Created: February 15, 2026 | Time: 14:30 UTC
+                Created: February 27, 2026 | Time: 11:12 UTC
             </div>
         </footer>
     </div>
