--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
             </h2>
             <div class="info-grid">
                 <div class="info-label">Username</div>
-                <div class="info-value">(the hacker of account)"princessofscratc8"</div>
+                <div class="info-value">snowfloor123</div>
             </div>
             <div class="info-grid">
                 <div class="info-label">Platform</div>
@@ -456,7 +456,7 @@
                 Complaint Description
             </h2>
             <div class="complaint-text">
-                I hereby submit this official complaint against user <strong>(the hacker of account)"princessofscratc8"</strong> on the Scratch platform for hacking another user's account, based on the following details:
+                I hereby submit this official complaint against user <strong>snowfloor123</strong> on the Scratch platform for hacking another user's account, based on the following details:
                 <br><br>
                 <strong>1. Unauthorized Account Access:</strong> The reported user gained access to another Scratch account without the owner's permission.
                 <br><br>
