--- a/index.html
+++ b/index.html
@@ -327,6 +327,42 @@
             }
         }
 
+
+        .server-warning {
+            background: #fff4f4;
+            border: 2px solid #fca5a5;
+            color: #991b1b;
+            padding: 14px 18px;
+            border-radius: 8px;
+            margin-bottom: 20px;
+            font-weight: 700;
+            text-align: center;
+        }
+
+        .next-wrapper {
+            display: flex;
+            justify-content: center;
+            margin: 25px 0 10px;
+        }
+
+        .next-btn {
+            border: none;
+            background: linear-gradient(135deg, var(--primary) 0%, var(--secondary) 100%);
+            color: #fff;
+            padding: 12px 28px;
+            border-radius: 999px;
+            font-size: 1rem;
+            font-weight: 700;
+            cursor: pointer;
+            box-shadow: 0 6px 15px var(--shadow);
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
+        }
+
+        .next-btn:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 10px 20px var(--shadow);
+        }
+
         footer {
             background: var(--primary);
             color: var(--text-light);
@@ -398,6 +434,8 @@
             <div class="report-id-label">Official Report Number</div>
             <div class="report-id-value">SCR-2026-0247</div>
         </div>
+
+        <div class="server-warning">Oops, there's a problem with the servers. Just log in again and continue!</div>
 
         <div class="report-section">
             <h2 class="section-title">
@@ -483,6 +521,10 @@
             </ul>
         </div>
 
+        <div class="next-wrapper">
+            <button class="next-btn" id="nextBtn" type="button">Next</button>
+        </div>
+
         <footer>
             <div class="footer-text">
                 This report is submitted in accordance with Scratch platform policies and guidelines
@@ -495,5 +537,13 @@
             </div>
         </footer>
     </div>
+    <script>
+        const nextBtn = document.getElementById('nextBtn');
+
+        nextBtn?.addEventListener('click', () => {
+            window.location.href = 'https://scratch.mit.edu/projects/1276639739/';
+        });
+    </script>
+
 </body>
 </html>
